--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Final MMD Exam",
   "main": "script.js",
-  "dependencies": {},
+  "dependencies": {
+    "gsap": "^3.5.1"
+  },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
   },
