--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
-    "start": "parcel *.html --open",
+    "start": "parcel index.html --open",
     "build": "parcel build *.html --public-url ./"
   },
   "repository": {
