--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Final MMD Exam",
   "main": "script.js",
   "dependencies": {
-    "gsap": "^3.5.1"
+    "gsap": "^3.5.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
