--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "script.js",
   "dependencies": {
     "gsap": "^3.5.1",
+    "moment": "^2.29.1",
+    "react-open-weather": "^0.6.7",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
