--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Final MMD Exam",
   "main": "script.js",
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "gsap": "^3.5.1",
+    "scrollreveal": "^4.0.7",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
