--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Final MMD Exam",
   "main": "script.js",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "gsap": "^3.5.1",
+    "react-open-weather": "^0.6.7",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
